--- a/VRChat/03/1353303.html
+++ b/VRChat/03/1353303.html
@@ -77,9 +77,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "jZPGP96kyCcC1I7Q5jLIGZHl56VCHwgtefHidXlbnkE="></script>
+    "ahmoaFelEc4Yvpy8X8SPA9SP8fFfpz71PRQFT+vLTAE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ルル","description":"オリジナルアバター【ルル】ver1.01\n\n\n夜空をイメージした女の子のルルちゃんです。\nぜひ可愛がってくださいー！\n\nこの子にぴったりなロゴはぜろりんさん(@sissyo40) に作っていただきました！\n\n\n制限があるわけではないですが、VRChatでアバターとして使用されることを想定しています\n\n\n【アップデート履歴】\nv1.01\n・ルルちゃん用にコピーしたRefrex Shader の名前が衝突する可能性があったので、別名に変更しました\n・素体入りFBXを同梱しました\n\n\n\n利用の注意\n\n◆商業利用について\n\n禁止事項に該当しない場合、可能です\n\n\n◆R-18・R-18Gへの利用について\n\n特に規制はありません。\n\n\n◆改変について\n\nデータの改変は自由です。\n\n\n◆著作権\n\n『ルル』に関係するこの配布データ及び改変したデータが持つ著作権は大元の製作者である『こおりみず』に帰属するものとします。\n\n\n◆禁止事項\n\nこのファイルに付属されている『ルル』のモデルデータ・テクスチャーデータそのままの再配付や販売はしないでください。\nある程度改変されたものについては大丈夫です。　大丈夫なのか心配でしたら『こおりみず』までご相談下さい。\n\n特定個人や団体への中傷を目的とした利用は禁止します。\n\n\n◆トラブルについて\n\n『こおりみず』は、本モデル『ルル』を使用したことによる金銭・機器・機会的トラブルの責任を一切負わないものとします。\n\nこの利用規約は予告なく変更・改定されることがあります。ご了承ください。","url":"https://booth.pm/ja/items/1353303","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/8eae0ce3-7d8e-4436-9710-ea35a9636d4c/i/1353303/3b7b22d9-3d97-4f81-a82a-e387f91d67b2_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jZPGP96kyCcC1I7Q5jLIGZHl56VCHwgtefHidXlbnkE="></script>
+    nonce="ahmoaFelEc4Yvpy8X8SPA9SP8fFfpz71PRQFT+vLTAE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -659,7 +659,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
